--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "node server/index.js",
+    "server": "node server/server.cjs",
     "start": "concurrently \"npm run server\" \"npm run dev\""
   },
   "dependencies": {
